--- a/FaceD/src/components/Navigation/navigation.css
+++ b/FaceD/src/components/Navigation/navigation.css
@@ -1,3 +1,5 @@
+
+
 .but{
     
     border-radius: 20%;
@@ -11,3 +13,53 @@
     box-shadow: 0px 0px 8px 2px rgba( 0, 0, 0, 0.2 );
     background-color: #b6ebdf;
 }
+button {
+    cursor: pointer;
+    padding: 14px 21px;
+    border: 0;
+    border-radius: 4px;
+    font-weight: 600;
+    margin-right: 20px;
+    max-width: 130px;
+    width:20em;
+    box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
+    transition: 0.4s;
+  }
+  
+  .reg {
+    width:100%;
+    height:55px;
+    margin-top: 7px;
+    margin-right:7px;
+    border:none;
+    border-radius:5px;
+    font-size:17px;
+    font-weight:600;
+    color:#fff;
+    background-color:#17252A;
+    cursor:pointer;
+    overflow: hidden;
+  }
+  
+  .log {
+    width:100%;
+    height:55px;
+    margin-top: 7px;
+    margin-right:7px;
+    border:none;
+    border-radius:5px;
+    background-color:#e9ecf0;
+    font-size:17px;
+    font-weight:600;
+    cursor:pointer;
+}
+  
+  
+  button:hover {
+    color: white;
+    
+    box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
+    background-color: #17252A;
+  }
+  
+  
